<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/morado_1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_Valor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/Msj_Bienvenida"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="191dp"
        android:layout_height="266dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.094"
        app:srcCompat="@drawable/robot" />

    <Button
        android:id="@+id/btn_sum"
        android:layout_width="160dp"
        android:layout_height="101dp"
        android:layout_marginEnd="20dp"
        android:onClick="incrementarDato"
        android:text="@string/btn_incrementar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_Random"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toEndOf="@+id/btn_Toast"
        app:layout_constraintTop_toBottomOf="@+id/txt_Valor"
        app:layout_constraintVertical_bias="0.777" />

    <Button
        android:id="@+id/btn_Toast"
        android:layout_width="124dp"
        android:layout_height="91dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="180dp"
        android:onClick="MostrarMsj"
        android:text="@string/btn_Mensaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Random"
        android:layout_width="140dp"
        android:layout_height="96dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="180dp"
        android:onClick="IraSegundaPagina"
        android:text="@string/btn_Siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>